# rag

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
data/: Ariano Suassuna - Biografia.txt  História do Brasil.txt  Vida e História de Ayrton Senna.txt
src/: server.py
src/application/: data_ingestion.py  router.py  search.py
src/application/io_application/: search.py
src/domain/: __init__.py
src/domain/usecase/: data_ingestion.py  search.py
src/domain/usecase/common/: data_ingestion.py
src/domain/usecase/embedding/: data_ingestion.py  search.py
src/domain/usecase/guardrails/: search.py
src/domain/usecase/io_usecase/: search.py
src/domain/usecase/repository/: data_ingestion.py  search.py
src/domain/usecase/transformer/: data_ingestion.py
src/infrastructure/common/: data_ingestion.py
src/infrastructure/database/vector/: settings.py
src/infrastructure/database/vector/repository/: data_ingestion.py  search.py
src/infrastructure/embedding/: data_ingestion.py  search.py
src/infrastructure/guardrails/: search.py
src/infrastructure/transformer/: data_ingestion.py
