[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["José Celso <you@example.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
fastapi = "^0.117.1"
uvicorn = "^0.36.0"
qdrant-client = "1.15.1"
pydantic = "^2.12.4"
pydantic-settings = "^2.12.0"
sentence-transformers = "^5.1.2"
spacy = "^3.8.11"

[tool.poetry.scripts]
server = "src.server:main"
